# fm

./: Makefile
backend/: build.gradle.kts  settings.gradle.kts
backend/testClient/: package-lock.json  package.json  tsconfig.json
backend/testClient/src/: index.js  index.ts
cli/: Cargo.toml
cli/src/: main.rs
cli/src/clib/: cli.rs  mod.rs  stream_add.rs
cli/src/connection/: mod.rs
cli/src/lib/: cli.rs  mod.rs  stream_add.rs
cli/src/proto/: Control.rs  Stream.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/components/: Header.tsx
frontend/components/Content/: ClipPlaying.tsx  ContentArea.tsx  GenericCarousel.tsx  MobileNavBar.tsx  NavBar.tsx  Upcoming.tsx
frontend/pages/: _app.tsx  _document.tsx  index.tsx
frontend/styles/: ClipCard.module.css  ClipPlaying.module.css  Upcoming.module.css  Vinyl.module.css  global.css
mixer/: next.config.js  package-lock.json  package.json  tailwind.config.js
mixer/components/: NavView.tsx
mixer/pages/: _app.tsx  index.tsx  mixer.tsx  program.tsx
mixer/src-tauri/: Cargo.toml  tauri.conf.json
mixer/tauri-plugin-machine/: Cargo.toml  README.md
mixer/tauri-plugin-machine/.changes/: config.json  initial-release.md  readme.md
mixer/tauri-plugin-machine/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
mixer/tauri-plugin-machine/examples/vanilla/src-tauri/src/: main.rs
mixer/tauri-plugin-machine/src/: lib.rs  machine.rs
mixer/tauri-plugin-machine/src/service/: connection.rs  mod.rs
protocol/: Control.proto  Fm.proto  Mixer.proto  Stream.proto  Track.proto  messages.proto
(+60 files in other folders)
