[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = {version = "4.1.8", features = ["derive"]}
futures-util = {version = "0.3.27", features = ["sink"]}
protobuf = "3.2.0"
tokio = {version = "1.26.0", features = ["full"]}
tokio-tungstenite = "0.18.0"
url = "2.3.1"
