[package]
name = "mixer_machine"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.59"
exclude = ["/examples"]

[dependencies]
tauri = { version = "1.2.4" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
protobuf = "3.2.0"
anyhow = "1.0.70"
async-process = "1.6.0"
tokio-tungstenite = "0.18.0"
url = "2.3.1"
tokio = {version = "1.27.0", features = ["macros", "sync"]}
futures-util = "0.3.28"
thiserror = "1.0.40"
